syntax = "proto3";
option optimize_for = SPEED;

enum PROTOCOL
{
	ID_PKT_VERSION_REQ = 0;
	ID_PKT_VERSION_RES = 1;
	ID_PKT_LOGIN_REQ = 2;
	ID_PKT_LOGIN_RES = 3; 
	ID_PKT_CREATE_ROOM_REQ = 4;
	ID_PKT_CREATE_ROOM_RES = 5;
	ID_PKT_ENTER_ROOM_REQ = 6;
	ID_PKT_ENTER_ROOM_RES = 7;
	ID_PKT_LEAVE_ROOM_REQ = 8;
	ID_PKT_LEAVE_ROOM_RES = 9;
	ID_PKT_BITMAP_MESSAGE_REQ = 10;
	ID_PKT_BITMAP_MESSAGE_RES = 11;
	ID_PKT_NEW_USER_IN_ROOM_NTY = 12;
	ID_PKT_ROOM_LIST_REQ = 13;
	ID_PKT_ROOM_LIST_RES = 14;

	ID_PKT_MATCH_REQ = 15;
	ID_PKT_MATCH_RES = 16;

	ID_PKT_GAME_START_NTY = 17;
	ID_PKT_GAME_RESULT_NTY = 18;


	ID_PKT_RANK_REQ = 19;
	ID_PKT_RANK_RES = 20;

	ID_PKT_QNS_REQ = 21;
	ID_PKT_QNS_RES = 22;

	ID_PKT_ROOM_PASS_THROUGH_REQ = 23;
	ID_PKT_ROOM_PASS_THROUGH_RES = 24;

	ID_PKT_CANCEL_MATCH_REQ = 25;
	ID_PKT_CANCEL_MATCH_RES = 26;

	
	ID_PKT_NOTICE_REQ = 27;
	ID_PKT_NOTICE_RES = 28;

	ID_PKT_CHECK_NICKNAME_REQ = 29;
	ID_PKT_CHECK_NICKNAME_RES = 30;


	ID_PKT_AUDIO_MESSAGE_REQ = 31;
	ID_PKT_AUDIO_MESSAGE_RES = 32;
};

enum ErrorCode
{

	Success = 0;
	DataBaseError = 1;
	LoginDuplicate = 2;
	SystemError = 3;
	LoginFailed = 4;
};

enum eTeam
{
	None	= 0;
	WHITE	= 1;
	BLACK	= 2;
	AIM	= 3;
	AWHITE	= 4;
	ABLACK	= 5;
};

enum State
{
	Prepare = 0;
	Game = 1;
	End = 2;
};